# src/routes/news.route.js
@@ -4,17 +4,17 @@ import { authMiddleware } from '../middlewares/auth.middlewares.js'
 
 const router = Router()
 
-router.post('/', authMiddleware, create)
-router.get('/', findAll)
-router.get('/top', topNews)
-router.get('/sercha', searchByTitle)
-router.get('/byuser', authMiddleware, byUser)
-router.get('/:id', authMiddleware, findById)
-router.patch('/:id', authMiddleware, update)
-router.delete('/:id', authMiddleware, erase)
-router.patch('/like/:id', authMiddleware, likeNews)
-router.patch('/comment/:id', authMiddleware, addComment)
-router.patch('/comment/:idNews/:idComment', authMiddleware, deleteComment)
+router.post("/", authMiddleware, create);
+router.get("/", findAll);
+router.get("/top", topNews);
+router.get("/search", searchByTitle);
+router.get("/byUser", authMiddleware, byUser);
+router.get("/:id", authMiddleware, findById);
+router.patch("/:id", authMiddleware, update);
+router.delete("/:id", authMiddleware, erase);
+router.patch("/like/:id", authMiddleware, likeNews);
+router.patch("/comment/:id", authMiddleware, addComment);
+router.patch("/comment/:idNews/:idComment", authMiddleware, deleteComment);
 
 
 
