# src/swagger.json
@@ -20,7 +20,7 @@
     }
   ],
   "paths": {
-    "/user/create": {
+    "/user/": {
       "post": {
         "summary": "Create a new user",
         "description": "Route responsible for creating a new user",
@@ -37,7 +37,7 @@
                     "name": "Cacau Lima",
                     "username": "cacode",
                     "email": "clima@gmail.com",
-                    "password": "12345",
+                    "password": "1234567",
                     "avatar": "https://i.imgur.com/Ry1cb5M.png",
                     "background": "https://images.wallpapersden.com/image/download/triangle-8k-blue-pattern_bGZlbmiUmZqaraWkpJRmbmdlrWZlbWU.jpg"
                   }
@@ -93,7 +93,7 @@
         }
       }
     },
-    "/user/findById/{id}": {
+    "/user/{id}/": {
       "get": {
         "summary": "Search user by id",
         "description": "Route responsible for searching for user by id",
@@ -129,7 +129,7 @@
         }
       }
     },
-    "/user/update/{id}": {
+    "/user/{id}": {
       "patch": {
         "summary": "Update user by id",
         "description": "Route responsible for editing the user by id",
@@ -153,7 +153,7 @@
               "examples": {
                 "Users": {
                   "value": {
-                    "name": "Rodolfo Freitas"
+                    "name": "Thiago Lima"
                   }
                 }
               }
@@ -181,7 +181,7 @@
         }
       }
     },
-    "/auth/login": {
+    "/auth": {
       "post": {
         "summary": "Login to Breaking News",
         "description": "Route responsible for logging in a registered user",
@@ -195,7 +195,7 @@
               "examples": {
                 "User": {
                   "value": {
-                    "email": "rodolfofreitas@gmail.com",
+                    "email": "clima@gmail.com",
                     "password": "1234567"
                   }
                 }
@@ -213,20 +213,20 @@
         }
       }
     },
-    "/posts/create": {
+    "/news/": {
       "post": {
-        "summary": "Create a new post",
-        "description": "Route responsible for creating a new Post",
-        "tags": ["Post"],
+        "summary": "Create a new news",
+        "description": "Route responsible for creating a new News",
+        "tags": ["News"],
         "security": [{ "bearerAuth": [] }],
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Post"
+                "$ref": "#/components/schemas/News"
               },
               "examples": {
-                "Post": {
+                "News": {
                   "value": {
                     "user": "",
                     "banner": "https://labs.tadigital.com/wp-content/uploads/2017/07/ES6-banner.jpg",
@@ -253,7 +253,7 @@
               "application/json": {
                 "schemma": {
                   "type": "object",
-                  "$ref": "#/components/schemas/Post"
+                  "$ref": "#/components/schemas/News"
                 }
               }
             }
@@ -261,11 +261,11 @@
         }
       }
     },
-    "/posts": {
+    "/news": {
       "get": {
         "summary": "Search all posts",
         "description": "Route responsible for fetching all posts",
-        "tags": ["Post"],
+        "tags": ["News"],
         "parameters": [
           {
             "in": "query",
@@ -289,7 +289,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Post"
+                    "$ref": "#/components/schemas/News"
                   }
                 }
               }
@@ -298,11 +298,11 @@
         }
       }
     },
-    "/posts/top": {
+    "/news/top": {
       "get": {
-        "summary": "Search top post",
-        "description": "Route responsible for fetching top post",
-        "tags": ["Post"],
+        "summary": "Search top News",
+        "description": "Route responsible for fetching top News",
+        "tags": ["News"],
         "responses": {
           "400": {
             "description": "Not Found"
@@ -313,7 +313,7 @@
               "application/json": {
                 "schemma": {
                   "type": "object",
-                  "$ref": "#/components/schemas/Post"
+                  "$ref": "#/components/schemas/News"
                 }
               }
             }
@@ -321,11 +321,12 @@
         }
       }
     },
-    "/posts/search": {
+    "/news/search": {
       "get": {
-        "summary": "Search posts by title",
-        "description": "Route responsible for fetching the posts that match the title sent via query params",
-        "tags": ["Post"],
+        "summary": "Search News by title",
+        "description": "Route responsible for fetching the News that match the title sent via query params",
+        "tags": ["News"],
+        "security": [{ "bearerAuth": [] }],
         "parameters": [
           {
             "in": "query",
@@ -345,7 +346,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Post"
+                    "$ref": "#/components/schemas/News"
                   }
                 }
               }
@@ -354,18 +355,47 @@
         }
       }
     },
-    "/posts/byIdPost/{id}": {
-      "patch": {
-        "summary": "Search post by id",
-        "description": "Route responsible for fetching post by id",
-        "tags": ["Post"],
+    "/news/byUser": {
+      "get": {
+        "summary": "Search news by use id",
+        "description": "Route responsible for fetching news by use id",
+        "tags": ["News"],
+        "security": [{ "bearerAuth": [] }],
+        "responses": {
+          "400": {
+            "description": "Not Found"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/News"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/news/{id}/": {
+      "get": {
+        "summary": "Search News by id",
+        "description": "Route responsible for fetching News by id",
+        "tags": ["News"],
         "security": [{ "bearerAuth": [] }],
         "parameters": [
           {
             "in": "path",
             "name": "id",
             "type": "string",
-            "description": "Post ID",
+            "description": "News ID",
             "required": true
           }
         ],
@@ -382,7 +412,7 @@
               "application/json": {
                 "schemma": {
                   "type": "object",
-                  "$ref": "#/components/schemas/Post"
+                  "$ref": "#/components/schemas/News"
                 }
               }
             }
@@ -390,39 +420,11 @@
         }
       }
     },
-    "/posts/byUserId": {
-      "get": {
-        "summary": "Search posts by use id",
-        "description": "Route responsible for fetching posts by use id",
-        "tags": ["Post"],
-        "responses": {
-          "400": {
-            "description": "Not Found"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Post"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/posts/upadate/{id}": {
+    "/news/{id}": {
       "patch": {
-        "summary": "Update a post",
-        "description": "Route responsible for updating a Post",
-        "tags": ["Post"],
+        "summary": "Update a News",
+        "description": "Route responsible for updating a News",
+        "tags": ["News"],
         "security": [{ "bearerAuth": [] }],
         "parameters": [
           {
@@ -437,14 +439,14 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Post"
+                "$ref": "#/components/schemas/News"
               },
               "examples": {
                 "Post": {
                   "value": {
-                    "banner": "",
-                    "title": "",
-                    "text": ""
+                    "banner": "Edit",
+                    "title": "Edit",
+                    "text": "Edit"
                   }
                 }
               }
@@ -464,7 +466,7 @@
               "application/json": {
                 "schemma": {
                   "type": "object",
-                  "$ref": "#/components/schemas/Post"
+                  "$ref": "#/components/schemas/News"
                 }
               }
             }
@@ -472,18 +474,18 @@
         }
       }
     },
-    "/posts/delete/{id}": {
+    "/news/{id}/": {
       "delete": {
-        "summary": "Delete a post",
-        "description": "Route responsible for deleting a Post",
-        "tags": ["Post"],
+        "summary": "Delete a News",
+        "description": "Route responsible for deleting a News",
+        "tags": ["News"],
         "security": [{ "bearerAuth": [] }],
         "parameters": [
           {
             "in": "path",
             "name": "id",
             "type": "string",
-            "description": "Post ID",
+            "description": "News ID",
             "required": true
           }
         ],
@@ -500,11 +502,11 @@
         }
       }
     },
-    "/posts/{id}/like": {
+    "/news/like/{id}/": {
       "patch": {
-        "summary": "Like a post",
-        "description": "Route responsible for liking a post",
-        "tags": ["Post"],
+        "summary": "Like a News",
+        "description": "Route responsible for liking a News",
+        "tags": ["News"],
         "security": [{ "bearerAuth": [] }],
         "parameters": [
           {
@@ -528,18 +530,18 @@
         }
       }
     },
-    "/posts/{id}/comment": {
+    "/news/comment/{id}/": {
       "patch": {
-        "summary": "Comment on a post",
-        "description": "Route responsible for commenting on a post",
-        "tags": ["Post"],
+        "summary": "Comment on a News",
+        "description": "Route responsible for commenting on a News",
+        "tags": ["News"],
         "security": [{ "bearerAuth": [] }],
         "parameters": [
           {
             "in": "path",
             "name": "id",
             "type": "string",
-            "description": "User ID",
+            "description": "News ID",
             "required": true
           }
         ],
@@ -559,6 +561,41 @@
             }
           }
         },
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/news/comment/{idNews}/{idComment}": {
+      "patch": {
+        "summary": "Comment on a News",
+        "description": "Route responsible for commenting on a News",
+        "tags": ["News"],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "idNews",
+            "type": "string",
+            "description": "News ID",
+            "required": true
+          },
+          {
+            "in": "path",
+            "name": "idComment",
+            "type": "string",
+            "description": "Comment ID",
+            "required": true
+          }
+        ],
         "responses": {
           "401": {
             "description": "Unauthorized"
@@ -605,7 +642,7 @@
           }
         }
       },
-      "Post": {
+      "News": {
         "type": "object",
         "properties": {
           "user": {
